# NonogramSolver

./: .clang-format  CMakeLists.txt  README.md  exampleInput1.txt  exampleInput2.txt
src/: CMakeLists.txt  ColumnIterator.hpp  Combination.cpp  Combination.hpp  FileParser.cpp  FileParser.hpp  Generator.cpp  Generator.hpp  Line.cpp  Line.hpp  Nonogram.cpp  Nonogram.hpp  Types.hpp  main.cpp
tests/: CMakeLists.txt  TestColumnIterator.cpp  TestCombination.cpp  TestFileParser.cpp  TestGenerator.cpp  TestLine.cpp  TestNonogram.cpp
